updating example notebook with context and comments

--- a/example_site/index.html
+++ b/example_site/index.html
@@ -44,7 +44,7 @@
                 <jupyter-widget-embed
                         style="margin-top: 40px"
                         voila-url="http://localhost:8000"
-                        notebook="bqplot_vuetify_example.ipynb"
+                        notebook="example_content.ipynb"
                         mount-id="histogram_bins2"
                 ></jupyter-widget-embed>
 
@@ -59,7 +59,7 @@
             <v-content>
                 <jupyter-widget-embed
                         voila-url="http://localhost:8000"
-                        notebook="bqplot_vuetify_example.ipynb"
+                        notebook="example_content.ipynb"
                         mount-id="content-main"
                 ></jupyter-widget-embed>
                 <jupyter-widget-embed
